group = 'pl.edu.agh.iisg.to'
version = '1.0'

repositories {
    mavenCentral()
}

apply plugin: 'java'
apply plugin: 'application'

application {
    applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
    mainClass = 'pl.edu.agh.iisg.to.Main'
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.46.1.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.13.4'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.13.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
